buildscript {
    ext {
        queryDslVersion = '4.4.0'
        lombokVersion = '1.18.20'
        mapstructVersion = '1.4.2.Final'
    }
}

plugins {
    id 'org.springframework.boot' version '2.5.2'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'com.google.cloud.tools.jib' version '3.1.1'
    id 'java'
}

group = 'com.xtra'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "org.springframework.boot:spring-boot-starter-log4j2"
    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
    implementation "org.springframework.boot:spring-boot-starter-validation"
    implementation "org.springframework.boot:spring-boot-configuration-processor"
    implementation "org.springframework.boot:spring-boot-starter-webflux"
    implementation "org.springframework.boot:spring-boot-starter-amqp"
    implementation "org.springframework.boot:spring-boot-starter-security"
    implementation 'org.springframework.data:spring-data-commons:2.3.9.RELEASE'

    implementation "org.springdoc:springdoc-openapi-ui:1.5.9"
    implementation "org.springdoc:springdoc-openapi-data-rest:1.5.9"
    implementation "org.projectreactor:reactor-spring:1.0.1.RELEASE"
    implementation "com.google.code.gson:gson:2.8.6"
    implementation "org.mariadb.jdbc:mariadb-java-client"
    implementation "org.apache.commons:commons-lang3:3.11"
    implementation "org.apache.commons:commons-collections4:4.4"
    implementation 'org.apache.commons:commons-csv:1.8'
    implementation "commons-io:commons-io:2.10.0"
    implementation "commons-codec:commons-codec:1.15"
    implementation "com.google.guava:guava:29.0-jre"
    implementation "com.auth0:java-jwt:3.11.0"
    implementation "com.neovisionaries:nv-i18n:1.27"
    implementation "com.maxmind.geoip2:geoip2:2.15.0"
    implementation "org.json:json:20201115"
    implementation 'org.jdom:jdom2:2.0.6'
    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
    implementation "org.projectlombok:lombok:${lombokVersion}"
    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
    implementation 'com.github.javafaker:javafaker:1.0.2'
    implementation 'com.zaxxer:nuprocess:2.0.2'
    implementation group: 'de.taimos', name: 'totp', version: '1.0'
    implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'
    implementation group: 'com.google.zxing', name: 'javase', version: '3.4.0'
    implementation group: 'com.github.holgerbrandl', name: 'themoviedbapi', version:'1.12'

    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    compileOnly 'org.springframework.boot:spring-boot-devtools'

    annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}:jpa",
            "org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.2.Final",
            "javax.annotation:javax.annotation-api:1.3.2",
            "org.projectlombok:lombok:${lombokVersion}",
            "org.mapstruct:mapstruct-processor:${mapstructVersion}"

    testImplementation("org.assertj:assertj-core:3.11.1")
    testImplementation('org.mockito:mockito-core:3.8.0')
    testImplementation('org.mockito:mockito-junit-jupiter:3.7.7')
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }


}

test {
    useJUnitPlatform()
}

configurations {
    all {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
    }
}

jib{
    from{
        image='adoptopenjdk:11-jre'
    }
    to {
        image = 'registry.gitlab.com/xtrapanel/xtra-api'
        tags = ['latest']
    }
}